# course-advisor

./: .env.example  .gitignore  BACKEND_OVERVIEW.md  GEMINI_TASKS.md  README.md  TODO.md  check_agent.py  check_agent_run.py  docker-compose.yml  package-lock.json  test.db  transcipt.html  update_task2.py  update_task3.py
backend/: .dockerignore  Dockerfile  README.md  agent.py  check_db.py  db.py  main.py  models.py  parser.py  pyproject.toml  requirements.txt  seed.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 015baa44a711_track_material_processing_progress.py  14b04c773ba0_add_last_interacted_at_to_learning_plans.py  1a68ae6f82ce_.py  2026_04_25_profile_add_profile_and_plans.py  2026_04_26_advanced_plan_fields.py  2026_05_02_add_course_material_chunks.py  2026_05_14_add_answers_to_test_scores.py  2026_05_18_add_language_to_learning_plans.py  3046ccaa520b_refactor_schema_for_lesson_isolation.py  35088e8d2460_add_lessons_table.py  604a8f7f7838_.py  67c94e0d0429_fix_course_id_autoincrement_and_.py  76220e01023f_.py  (+13 more)
backend/app/: agent.py  analysis_agent.py  auth.py  crud.py  db.py  embeddings.py  jobs.py  main.py  models.py  parser.py  tasks.py  worker.py
backend/scoring/: content.py  orchestrator.py  preference.py  rag.py  skill_gap.py
backend/tests/: conftest.py  test_admin_courses.py  test_agent_factory.py  test_agent_refactor.py  test_chat_api.py  test_database_models.py  test_e2e.py  test_learning_plan_redesign.py  test_lesson_isolation.py  test_lessons.py  test_main_endpoints.py  test_models.py  test_parser.py  test_plan_repository_score.py  test_practice_tests.py  test_redis_chat.py  test_scaffolding.py  test_scoring.py  test_step_tests.py  test_tavily_integration.py  test_youtube_integration.py  verify_task1.py
(+262 files in other folders)
